tests/snapshots/files__reassociate_mul_no_opt.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res_nothing)"
---
@main {
  ret;
}
@mul_reassoc(x: int, y: int, z: int) {
  v0_: int = const 5;
  v1_: int = const 6;
  v2_: int = mul v1_ z;
  v3_: int = mul y v2_;
  v4_: int = mul v0_ v3_;
  v5_: int = mul x v4_;
  ret v5_;
}

