tests/snapshots/files__rec_to_loop_sub-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@recPrint(v0: int): int {
  c1_: int = const 0;
  v2_: bool = eq c1_ v0;
  v3_: bool = not v2_;
  c4_: int = const 0;
  v5_: int = id v0;
  v6_: int = id c4_;
  br v3_ .b7_ .b8_;
.b7_:
  c9_: int = const 0;
  v10_: int = id v0;
  v11_: int = id c9_;
.b12_:
  c13_: int = const 1;
  v14_: int = sub v10_ c13_;
  v15_: int = sub v11_ c13_;
  c16_: int = const 0;
  v17_: bool = eq c16_ v14_;
  v18_: bool = not v17_;
  v10_: int = id v14_;
  v11_: int = id v15_;
  br v18_ .b12_ .b19_;
.b19_:
  v5_: int = id v10_;
  v6_: int = id v11_;
  v20_: int = add v5_ v6_;
  ret v20_;
  jmp .b21_;
.b8_:
  v20_: int = add v5_ v6_;
  ret v20_;
.b21_:
}
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = eq c1_ v0;
  v3_: bool = not v2_;
  c4_: int = const 0;
  v5_: int = id v0;
  v6_: int = id c4_;
  br v3_ .b7_ .b8_;
.b7_:
  c9_: int = const 0;
  v10_: int = id v0;
  v11_: int = id c9_;
.b12_:
  c13_: int = const 1;
  v14_: int = sub v10_ c13_;
  v15_: int = sub v11_ c13_;
  c16_: int = const 0;
  v17_: bool = eq c16_ v14_;
  v18_: bool = not v17_;
  v10_: int = id v14_;
  v11_: int = id v15_;
  br v18_ .b12_ .b19_;
.b19_:
  v5_: int = id v10_;
  v6_: int = id v11_;
  v20_: int = add v5_ v6_;
  print v20_;
  ret;
  jmp .b21_;
.b8_:
  v20_: int = add v5_ v6_;
  print v20_;
  ret;
.b21_:
}
