tests/snapshots/files__recurse_once-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@to_zero(v0: int): int {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  v3_: int = id v0;
  br v2_ .b4_ .b5_;
.b4_:
  c6_: int = const 0;
  c7_: int = const 1;
  v8_: int = sub v0 c7_;
  v9_: bool = lt c6_ v8_;
  v10_: int = id v8_;
  br v9_ .b11_ .b12_;
.b11_:
  c13_: int = const 0;
  c14_: int = const 1;
  v15_: int = sub v8_ c14_;
  v16_: bool = lt c13_ v15_;
  v17_: int = id v15_;
  br v16_ .b18_ .b19_;
.b18_:
  c20_: int = const 1;
  v21_: int = sub v15_ c20_;
  v22_: int = call @to_zero v21_;
  v17_: int = id v22_;
  v10_: int = id v17_;
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b19_:
  v10_: int = id v17_;
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b12_:
  v3_: int = id v10_;
  ret v3_;
  jmp .b23_;
.b5_:
  ret v3_;
.b23_:
}
@main {
  c0_: int = const 0;
  print c0_;
  ret;
}
