tests/snapshots/files__ret_arg.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
  ret;
}
@ret_arg(x: int) {
  ret x;
}

