tests/snapshots/files__ret_arg_no_opt.snap
---
source: tests/files.rs
assertion_line: 21
expression: "format!(\"{}\", res_nothing)"
---
@main {
  ret;
}
@ret_arg(x: int) {
  ret x;
}

