tests/snapshots/files__select-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const 5;
  c2_: int = const 10;
  v3_: bool = eq c1_ c2_;
  v4_: bool = not v3_;
  c5_: int = const 0;
  v6_: int = id c5_;
  v7_: int = id c2_;
  v8_: int = id c5_;
  v9_: int = id v0;
  br v4_ .b10_ .b11_;
.b10_:
  v12_: int = id c5_;
  v13_: int = id c2_;
  v14_: int = id c5_;
  v15_: int = id v0;
.b16_:
  c17_: int = const 1;
  v18_: int = add c17_ v14_;
  v19_: bool = eq v15_ v18_;
  v20_: int = add v12_ v18_;
  v21_: int = id v20_;
  v22_: int = id v13_;
  v23_: int = id v18_;
  v24_: int = id v15_;
  br v19_ .b25_ .b26_;
.b25_:
  c27_: int = const 5;
  v21_: int = id v20_;
  v22_: int = id c27_;
  v23_: int = id v18_;
  v24_: int = id v15_;
.b26_:
  c28_: int = const 5;
  v29_: bool = eq c28_ v22_;
  v30_: bool = not v29_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v14_: int = id v23_;
  v15_: int = id v24_;
  br v30_ .b16_ .b31_;
.b31_:
  v6_: int = id v12_;
  v7_: int = id v13_;
  v8_: int = id v14_;
  v9_: int = id v15_;
  print v6_;
  ret;
  jmp .b32_;
.b11_:
  print v6_;
  ret;
.b32_:
}
